# cpe-testautomation

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Jenkinsfile  Makefile  README.md  TODO.md  conftest.py  pyproject.toml  requirements.txt  testbed.example.yaml
.autopilot/: plan.md  progress.md  requirement.md  research.md  scope-log.md  spec.md  state.json  usage.jsonl  verify-report.json  verify-report.md
cpe_ta/: __init__.py  cli.py
cpe_ta/core/: __init__.py  config.py  criteria.py  errors.py  inventory.py  results.py  runner.py  security.py  selection.py
cpe_ta/dashboard/: __init__.py  app.py  data.py  help.py  models.py  runner.py
cpe_ta/dashboard/static/: app.css  app.js  index.html
cpe_ta/dut/: base.py  capabilities.py  datamodel.py
cpe_ta/dut/drivers/: generic.py
cpe_ta/dut/sim/: sim_cpe.py
cpe_ta/hal/: base.py  factory.py
cpe_ta/hal/drivers/: __init__.py  netconf_switch.py  pdu_http.py  rf_attenuator.py  serial_console.py  snmp_switch.py  usb_relay.py
cpe_ta/infra/: base.py
cpe_ta/report/: charts.py  html.py  junit.py  pdf.py
docs/: architecture.md  criteria.md  deferred-matrix.md  testbed.md  writing-tests.md
profiles/: rfc2544.yaml  rfc6349.yaml
tests/acs/: __init__.py  conftest.py  test_cwmp_rpc.py
tests/dashboard/: test_cli_dashboard.py  test_data.py  test_data_db.py  test_export.py  test_filter.py  test_frontend.py  test_help.py  test_inventory.py  test_models.py  test_offline.py  test_routes.py  test_routes_empty.py  test_run_flow.py  test_runner.py
tests/dhcp/: __init__.py  conftest.py  test_dhcp_basic.py  test_dhcp_options.py
tests/dut/: test_datamodel_mapping.py  test_sim_cpe.py
tests/framework/: test_ci_templates.py  test_cli.py  test_cli_inventory.py  test_config.py  test_criteria.py  test_determinism.py  test_docs.py  test_domain_coverage.py  test_errors.py  test_hal_completeness.py  test_infra_sim.py  test_layering.py  test_parallel_isolation.py  test_reorder.py  test_report.py  test_results_db.py  test_selection.py
tests/hal/: test_factory_switch.py  test_inventory.py  test_sim_instruments.py
tests/ipv6/: __init__.py  conftest.py  test_ipv6_stack.py
tests/lan/: __init__.py  conftest.py  test_autoneg.py  test_switching.py
tests/multicast/: __init__.py  conftest.py  test_multicast.py
tests/qos/: __init__.py  conftest.py  test_perf_engine.py
tests/security/: conftest.py  test_en18031.py  test_security_scan.py
tests/stress/: conftest.py  test_hw_soak.py  test_stress_short.py
tests/tech/: __init__.py  test_hw_access_tech.py
tests/usb/: __init__.py  test_hw_usb.py
tests/voip/: __init__.py  test_hw_voip.py
tests/wan/: __init__.py  conftest.py  test_nat_firewall.py  test_wan_connectivity.py
tests/wifi/: __init__.py  conftest.py  test_hw_rf.py  test_security_modes.py  test_ssid.py
(+20 files in other folders)
